@@ -1,5 +1,3 @@
--Xms4g
+-Xms1g
 -Xmx4g
--XX:MaxPermSize=350m
 -XX:ReservedCodeCacheSize=300m
--XX:+UseCompressedOops
